[NIAD-3134] Enhance DocumentReferenceMapper.java to use findFirst(), add triangulation to DocumentReferenceMapperTest.java